criando as páginas

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
   </div>
   <ul class="menu">
     <li class="A2"><a class="A3" href="index.html"><b>HOME</b></a></li>
-    <li class="A2"><a class="A3" href=""><b>VOLÊI</b></a></li>
+    <li class="A2"><a class="A3" href="volei.html"><b>VOLÊI</b></a></li>
     <li class="A2">
-      <a class="A3" href=""><b>BASQUETE</b></a>
+      <a class="A3" href="basquete.html"><b>BASQUETE</b></a>
     </li>
-    <li class="A2"><a class="A3" href=""><b>FUTEBOL</b></a></li>
+    <li class="A2"><a class="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
     <li class="A2">
-      <a class="A3" href=""><b>HANDEBOL</b></a>
+      <a class="A3" href="handebol.html"><b>HANDEBOL</b></a>
     </li>
   </ul>
-    <img src="Imagens/banner2.gif" alt="banner" class="banner">
+    <img src="Imagens/banner1.png" alt="banner" class="banner" >
 </body>
 
 </html>
