--- a/index.html
+++ b/index.html
@@ -8,30 +8,54 @@
   <link rel="stylesheet" href="style.css">
   <title>JORNAL ESPORTIVO: </title>
   <style>
-  
+    main#conteudo {
+      display: grid;
+      grid-template-columns: auto auto auto;
+    }
   </style>
 </head>
 
-<body class="body">
+<body id="body">
 
   </div>
-  <div class="escolha1">
+  <div id="escolha1">
     <section>
-      <h1 class="task">ESPORTES</h1>
+      <h1 id="task">ESPORTES</h1>
     </section>
   </div>
-  <ul class="menu">
-    <li class="A2"><a class="A3" href="index.html"><b>HOME</b></a></li>
-    <li class="A2"><a class="A3" href="volei.html"><b>VOLÊI</b></a></li>
-    <li class="A2">
-      <a class="A3" href="basquete.html"><b>BASQUETE</b></a>
-    </li>
-    <li class="A2"><a class="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
-    <li class="A2">
-      <a class="A3" href="handebol.html"><b>HANDEBOL</b></a>
-    </li>
+  <ul id="menu">
+    <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
+    <li id="A2"><a id="A3" href="volei.html"><b>VOLÊI</b></a></li>
+    <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
+    <li id="A2"><a id="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
+    <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
   </ul>
-    <img src="Imagens/banner1.png" alt="banner" class="banner" >
+  <img src="Imagens/banner1.png" alt="banner" id="banner">
+  <section id="container">
+    <main id="conteudo">
+      <a href="fultebol.html" id="card-item">
+        <h1 id="text">Corinthians classifado para as quartas de finais</h1>
+      </a>
+      <a href="volei.html" id="volei">
+        <h1 id="text" style="margin-top: 210px;">Renasce Sorocaba estreia no Paulista de vôlei contra o Pinheiros fora
+          de casa</h1>
+      </a>
+      <a href="basquete.html" id="basquete">
+        <h1 id="text" style="margin-top: 165px;">Mundial sub-19, Draft, NBA Summer League e Seleção: as "férias" de
+          Márcio e Reynan, revelações do Franca
+        </h1>
+      </a>
+      <a href="https://www.cocacolabrasil.com.br/inicial" id="propa1">
+        <h1 id="text">Para juntar sua família</h1>
+      </a>
+      <a href="handebol.html" id="handebol">
+        <h1 id="text">Ifac Tarauacá fatura título do Campeonato Acreano de Handebol Escolar Sub-17</h1>
+      </a>
+
+    </main>
+  </section>
+
+
 </body>
 
 </html>
