--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       display: grid;
       grid-template-columns: auto auto auto;
     }
+
+    main#conteudo2 {
+      display: grid;
+      grid-template-columns: 200px 800px 200px;
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -37,19 +43,24 @@
         <h1 id="text">Corinthians classifado para as quartas de finais</h1>
       </a>
       <a href="volei.html" id="volei">
-        <h1 id="text" style="margin-top: 210px;">Renasce Sorocaba estreia no Paulista de vôlei contra o Pinheiros fora
+        <h1 id="text"; style="margin-top: 210px;">Renasce Sorocaba estreia no Paulista de vôlei contra o Pinheiros fora
           de casa</h1>
       </a>
       <a href="basquete.html" id="basquete">
-        <h1 id="text" style="margin-top: 165px;">Mundial sub-19, Draft, NBA Summer League e Seleção: as "férias" de
+        <h1 id="text"; style="margin-top: 165px;">>Mundial sub-19, Draft, NBA Summer League e Seleção: as "férias" de
           Márcio e Reynan, revelações do Franca
         </h1>
       </a>
+    </main>
+    <main id="conteudo2" style="padding-left:  100x;">
       <a href="https://www.cocacolabrasil.com.br/inicial" id="propa1">
         <h1 id="text">Para juntar sua família</h1>
       </a>
       <a href="handebol.html" id="handebol">
-        <h1 id="text">Ifac Tarauacá fatura título do Campeonato Acreano de Handebol Escolar Sub-17</h1>
+        <h1 id="text"></h1>>Ifac Tarauacá fatura título do Campeonato Acreano de Handebol Escolar Sub-17</h1>
+      </a>
+      <a href="https://www.cocacolabrasil.com.br/inicial" id="propa1">
+        <h1 id="text">Para juntar sua família</h1>
       </a>
 
     </main>
