--- a/handebol.html
+++ b/handebol.html
@@ -1,11 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>JORNAL ESPORTIVO:</title>
+        <style>
+
+        </style>
+    </head>
+
+    <body id="body">
+        <div id="escolha1">
+            <section>
+                <h1 id="task">V-SPORTS</h1>
+            </section>
+        </div>
+        <ul id="menu">
+            <li id="A2"><a id="A3" href="volei.html"><b>VOLÊI</b></a></li>
+            <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
+            <li id="A2"><a id="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
+            <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
+            <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
+        </ul>
+        <img src="Imagens/banner1.png" alt="banner" id="banner">
+    </body>
+
+    </html>
