--- a/volei.html
+++ b/volei.html
@@ -1,11 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>JORNAL ESPORTIVO:</title>
+        <style>
+            #texto {
+                font-size: 30px;
+                color: #000000;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            }
+
+            main#conteudo {
+                display: grid;
+                grid-template-columns: 1000px;
+                padding-left: 200px;
+                background-color: aliceblue;
+            }
+
+            main#conteudo2 {
+                display: grid;
+                grid-template-columns: auto auto;
+                margin-left: 100px;
+                margin-right: 100px;
+                background-color: aliceblue;
+
+            }
+            #volei{
+                padding-left: 200px;
+            }
+        </style>
+    </head>
+
+    <body id="body">
+        <div id="escolha1">
+            <section>
+                <h1 id="task">V-SPORTS</h1>
+            </section>
+        </div>
+        <ul id="menu">
+            <li id="A2"><a id="A3" href="volei.html"><b>VOLÊI</b></a></li>
+            <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
+            <li id="A2"><a id="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
+            <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
+            <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
+        </ul>
+        <img src="Imagens/banner1.png" alt="banner" id="banner">
+        <section>
+            <main id="conteudo">
+                <h1 id="tlt"><b>Seleção da Itália impressiona com jogo de vôlei em anfiteatro de gladiadores</b></h1>
+                <p id="texto">Abertura do Europeu de Vôlei Feminino foi disputado a céu aberto, na
+                    Arena de Verona</p>
+            </main>
+            <main id="conteudo2">
+                <img src="Imagens/noticias/volei.gif" alt="gif" i>
+            </main>
+        </section>
+    </body>
+
+    </html>
