--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Luckiest+Guy&family=Patua+One&family=Roboto+Condensed:ital,wght@0,300;1,300&family=Yeseva+One&display=swap" rel="stylesheet">
   <title>JORNAL ESPORTIVO: </title>
   <style>
     main#conteudo {
@@ -15,52 +18,52 @@
 
     main#conteudo2 {
       display: grid;
-      grid-template-columns: 200px 800px 200px;
-      text-align: center;
+      grid-template-columns: auto auto auto;
+      margin-left: 200px;
+      margin-right: 100px;
+
     }
   </style>
 </head>
 
 <body id="body">
-
-  </div>
   <div id="escolha1">
     <section>
-      <h1 id="task">ESPORTES</h1>
+      <h1 id="task">V-SPORTS</h1>
     </section>
   </div>
   <ul id="menu">
-    <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
     <li id="A2"><a id="A3" href="volei.html"><b>VOLÊI</b></a></li>
     <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
     <li id="A2"><a id="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
     <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
+    <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
   </ul>
   <img src="Imagens/banner1.png" alt="banner" id="banner">
-  <section id="container">
+  <section id="container" >
     <main id="conteudo">
-      <a href="fultebol.html" id="card-item">
+      <a href="fultebol.html" id="futebol">
         <h1 id="text">Corinthians classifado para as quartas de finais</h1>
       </a>
       <a href="volei.html" id="volei">
-        <h1 id="text"; style="margin-top: 210px;">Renasce Sorocaba estreia no Paulista de vôlei contra o Pinheiros fora
+        <h1 id="text" ; style="margin-top: 210px;">Renasce Sorocaba estreia no Paulista de vôlei contra o Pinheiros fora
           de casa</h1>
       </a>
       <a href="basquete.html" id="basquete">
-        <h1 id="text"; style="margin-top: 165px;">>Mundial sub-19, Draft, NBA Summer League e Seleção: as "férias" de
+        <h1 id="text" ; style="margin-top: 200px;font-size:35px;">Mundial sub-19, Draft, NBA Summer League e Seleção:
+          as "férias" de
           Márcio e Reynan, revelações do Franca
         </h1>
       </a>
     </main>
-    <main id="conteudo2" style="padding-left:  100x;">
+    <main id="conteudo2">
       <a href="https://www.cocacolabrasil.com.br/inicial" id="propa1">
-        <h1 id="text">Para juntar sua família</h1>
       </a>
       <a href="handebol.html" id="handebol">
-        <h1 id="text"></h1>>Ifac Tarauacá fatura título do Campeonato Acreano de Handebol Escolar Sub-17</h1>
+        <h1 id="text" style="margin-top: 255px;">Ifac Tarauacá fatura título do Campeonato Acreano de Handebol Escolar
+          Sub-17</h1>
       </a>
       <a href="https://www.cocacolabrasil.com.br/inicial" id="propa1">
-        <h1 id="text">Para juntar sua família</h1>
       </a>
 
     </main>
