--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="fultebol.html" id="futebol">
         <h1 id="text">Corinthians classifado para as quartas de finais</h1>
       </a>
-      <a href="volei.html" id="volei">
+      <a href="volei.html" id="volêi">
         <h1 id="text" ; style="margin-top: 210px;">Renasce Sorocaba estreia no Paulista de vôlei contra o Pinheiros fora
           de casa</h1>
       </a>
