--- a/volei.html
+++ b/volei.html
@@ -9,7 +9,7 @@
         <title>JORNAL ESPORTIVO:</title>
         <style>
             #texto {
-                font-size: 30px;
+                font-size: 20px;
                 color: #000000;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             }
@@ -19,18 +19,24 @@
                 grid-template-columns: 1000px;
                 padding-left: 200px;
                 background-color: aliceblue;
+                text-align: center;
             }
 
-            main#conteudo2 {
+            #volei {
+                margin-top: 20px;
+                padding-left: 40px;
+            }
+
+            div#texto {
+                text-align: left;
+                margin-left: 0px;
                 display: grid;
-                grid-template-columns: auto auto;
-                margin-left: 100px;
-                margin-right: 100px;
+                grid-template-columns: 400px auto;
+                padding-left: 100px;
                 background-color: aliceblue;
-
-            }
-            #volei{
-                padding-left: 200px;
+                font-size: 20px;
+                color: #000000;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             }
         </style>
     </head>
@@ -51,12 +57,33 @@
         <img src="Imagens/banner1.png" alt="banner" id="banner">
         <section>
             <main id="conteudo">
-                <h1 id="tlt"><b>Seleção da Itália impressiona com jogo de vôlei em anfiteatro de gladiadores</b></h1>
-                <p id="texto">Abertura do Europeu de Vôlei Feminino foi disputado a céu aberto, na
-                    Arena de Verona</p>
+                <h1 id="tlt" style="padding-left: 80px;"><b>Seleção da Itália impressiona com jogo de vôlei em
+                        anfiteatro de gladiadores</b></h1>
+                <p id="texto" style="padding-left: 80px;"><b>do Europeu de Vôlei Feminino foi disputado a céu
+                        aberto, na
+                        Arena de Verona</b> </p>
+                <br>
+                <div id="texto" style="padding-left: 80px;">
+                    <p>O Brasil segue com uma campanha irrepreensível no Sul-Americano Feminino, última competição antes
+                        do
+                        Pré-Olímpico em setembro, no Japão. Depois de estrear vencendo o Chile, a equipe do técnico José
+                        Roberto Guimarães fez 3 sets a 0 (parciais de 25/17, 25/16 e 25/17) neste domingo, no ginásio
+                        Geraldão, em Recife-PE. O próximo compromisso das brasileiras no torneio é contra o Peru, na
+                        terça-feira, às 20h30. O sportv2 transmite ao vivo.
+                        Brasil</p>
+                    <img src="Imagens/noticias/volei.gif" alt="gif" id="volei">
+                </div>
+                <img src="Imagens/noticias/volei2.webp" alt="volei"
+                    style="margin-top: 30px; margin-bottom: 30px; padding-left: 50px;">
+                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 10px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                ;"><b>Domínio no 2º set</b></h1>
+                <p id="texto" style="text-align: left; padding-left: 50px;">Diferentemente do primeiro set, o Brasil
+                    iniciou a segunda parcial melhor em quadra, fazendo 5 a 2.
+                    Pouco depois, Gabi soltou o braço, ampliando para 9 a 5. Estava fácil. Após levantamento perfeito de
+                    Roberta, Thaísa colocou a bola no chão, marcando 17 a 10. Numa largadinha de Kisy, o placar foi a 22
+                    a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
+                <img src="Imagens/noticias/volei3.webp" alt="volei" style="">
             </main>
-            <main id="conteudo2">
-                <img src="Imagens/noticias/volei.gif" alt="gif" i>
             </main>
         </section>
     </body>
