--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
       </a>
       <a href="https://www.cocacolabrasil.com.br/inicial" id="propa1">
       </a>
-
     </main>
   </section>
+<div id="rodap">
 
+      </div>
 
 </body>
 
