--- a/volei.html
+++ b/volei.html
@@ -59,7 +59,7 @@
             <main id="conteudo">
                 <h1 id="tlt" style="padding-left: 80px;"><b>Seleção da Itália impressiona com jogo de vôlei em
                         anfiteatro de gladiadores</b></h1>
-                <p id="texto" style="padding-left: 80px;"><b>do Europeu de Vôlei Feminino foi disputado a céu
+                <p id="texto" style="padding-left: 80px;"><b>Abertura do Europeu de Vôlei Feminino foi disputado a céu
                         aberto, na
                         Arena de Verona</b> </p>
                 <br>
@@ -73,6 +73,8 @@
                         Brasil</p>
                     <img src="Imagens/noticias/volei.gif" alt="gif" id="volei">
                 </div>
+                <div id="texto">
+                </div>
                 <img src="Imagens/noticias/volei2.webp" alt="volei"
                     style="margin-top: 30px; margin-bottom: 30px; padding-left: 50px;">
                 <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 10px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -82,7 +84,7 @@
                     Pouco depois, Gabi soltou o braço, ampliando para 9 a 5. Estava fácil. Após levantamento perfeito de
                     Roberta, Thaísa colocou a bola no chão, marcando 17 a 10. Numa largadinha de Kisy, o placar foi a 22
                     a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
-                <img src="Imagens/noticias/volei3.webp" alt="volei" style="">
+                <img src="Imagens/noticias/volei3.webp" alt="volei" style="padding-left: 50px;">
             </main>
             </main>
         </section>
