--- a/handebol.html
+++ b/handebol.html
@@ -8,7 +8,70 @@
         <link rel="stylesheet" href="style.css">
         <title>JORNAL ESPORTIVO:</title>
         <style>
+            #texto {
+                padding-left: 70px;
+                text-align: left;
+                font-size: 20px;
+                color: #000000;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
+            }
+
+            main#conteudo {
+                display: grid;
+                grid-template-columns: 1000px;
+                padding-left: 200px;
+                background-color: aliceblue;
+                text-align: center;
+            }
+
+            #volei {
+                margin-top: 20px;
+                padding-left: 40px;
+            }
+
+            div#texto {
+                text-align: left;
+                display: grid;
+                grid-template-columns: 400px auto;
+                padding-left: 100px;
+                background-color: aliceblue;
+                font-size: 20px;
+                color: #000000;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                margin-bottom: 15px;
+            }
+
+            #propa2 {
+                width: 300px;
+                height: 300px;
+                display: inline-block;
+                background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                background-size: 400px 400px;
+                text-decoration: none;
+                border-radius: 15px;
+                margin-left: 180px;
+            }
+
+            #propa1 {
+                width: 400px;
+                height: 400px;
+                display: inline-block;
+                background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                background-size: 500px 500px;
+                text-decoration: none;
+                margin-left: 120px;
+            }
+
+            #propa3 {
+                width: 600px;
+                height: 400px;
+                display: inline-block;
+                background-size: 700px 500px;
+                text-decoration: none;
+                margin-left: 120px;
+                padding-left: 300px;
+            }
         </style>
     </head>
 
@@ -26,6 +89,61 @@
             <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
         </ul>
         <img src="Imagens/banner1.png" alt="banner" id="banner">
+        <section>
+            <main id="conteudo">
+                <h1 id="tlt" style="padding-left: 80px;"><b>No 1º dia de inscrições, 24 times garantem presença na 17ª
+                        Copa TV Tribuna de Handebol Escolar
+                    </b></h1>
+                <br>
+                <div id="texto" style="padding-left: 80px; margin-right: 20px;">
+                    <p>OVinte e quatro equipes garantiram um lugar na 17ª Copa TV Tribuna de Handebol Escolar. Elas
+                        confirmaram suas participações no primeiro dia de inscrições, que ocorreu nessa segunda-feira
+                        (7). Os colégios têm até esta quarta-feira (9), para ingressarem no torneio desde ano. Do total,
+                        12 dos times vão jogar o campeonato masculino. As demais entram em quadra pela
+                        categoria feminino.</p>
+                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="volei">
+                </div>
+                <img src="Imagens/noticias/handebol1.webp" alt="handebol"
+                    style="margin-top: 30px; margin-bottom: 10px; padding-left: 50px;">
+                <p id="texto">As instituições que estarão presentes na disputa dos meninos são os colégios Presidente
+                    Kennedy, Carmo, Liceu São Paulo, Jean Piaget, Átrio, Integração, Universitas, Novo Tempo e Objetivo
+                    Praia Grande, além da UME Professor Doutor Luiz Pieruzzi Netto, da EM Albert Einstein e da EM
+                    Governador Franco Montoro.</p>
+                <img src="Imagens/propagandas/propaganda-coca.gif" alt="coca" id="propa3">
+                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                ;"><b>Domínio no 2º set</b></h1>
+                <div id="texto">
+                    <p>Diferentemente do primeiro set, o Brasil
+                        iniciou a segunda parcial melhor em quadra, fazendo 5 a 2.
+                        Pouco depois, Gabi soltou o braço, ampliando para 9 a 5. Estava fácil. Após levantamento
+                        perfeito de
+                        Roberta, Thaísa colocou a bola no chão, marcando 17 a 10. Numa largadinha de Kisy, o placar foi
+                        a 22
+                        a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
+                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa2">
+                </div>
+                <img src="Imagens/noticias/volei3.webp" alt="volei" style="padding-left: 50px;">
+                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                ;"><b>Argentina tenta reagir</b></h1>
+                <div id="texto">
+                    <p>A Argentina voltou melhor para o terceiro set, impondo dificuldades ao Brasil. Num erro de ataque
+                        de Gabi, as hermanas fizeram 5 a 3. Instantes depois foi a vez de Júlia Bergmann atacar para
+                        fora. Zé Roberto pediu desafio, e a arbitragem pegou um leve toque no bloqueio. Ponto das
+                        brasileiras, que diminuíram para 6 a 5. O empate do Brasil só foi acontecer quando Thaísa fez 8
+                        a 8. A virada veio com Kisy, que marcou
+                        12 a 11. A Argentina sentiu o golpe e, minutos depois, Erika Mercado parou no bloqueio
+                        brasileiro: 16 a 13. Sem forças para reagir, a seleção visitante viu o Brasil fazer 21 a 15 num
+                        ponto de Carol. Com a vitória mais que encaminhada, o time verde-amarelo tratou de fechar a
+                        partida em 25 a 17.
+                    </p>
+                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa1">
+                </div>
+                <img src="Imagens/noticias/volei4.webp" alt="volei" style="padding-left: 50px; margin-bottom: 10px;">
+            </main>
+        </section>
+        <div id="rodap">
+            <h1 id="task">V-SPORTS</h1>
+        </div>
     </body>
 
     </html>
