--- a/volei.html
+++ b/volei.html
@@ -9,9 +9,11 @@
         <title>JORNAL ESPORTIVO:</title>
         <style>
             #texto {
+                text-align: left;
                 font-size: 20px;
                 color: #000000;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
             }
 
             main#conteudo {
@@ -29,7 +31,6 @@
 
             div#texto {
                 text-align: left;
-                margin-left: 0px;
                 display: grid;
                 grid-template-columns: 400px auto;
                 padding-left: 100px;
@@ -37,6 +38,29 @@
                 font-size: 20px;
                 color: #000000;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                margin-bottom: 15px;
+            }
+
+            #propa2 {
+                width: 300px;
+                height: 300px;
+                display: inline-block;
+                background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                background-size: 400px 400px;
+                text-decoration: none;
+                border-radius: 15px;
+                margin-left: 180px;
+            }
+
+            #propa1 {
+                width: 400px;
+                height: 400px;
+                display: inline-block;
+                background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                background-size: 500px 500px;
+                text-decoration: none;
+                border-radius: 15px;
+                margin-left: 120px;
             }
         </style>
     </head>
@@ -73,21 +97,41 @@
                         Brasil</p>
                     <img src="Imagens/noticias/volei.gif" alt="gif" id="volei">
                 </div>
-                <div id="texto">
-                </div>
                 <img src="Imagens/noticias/volei2.webp" alt="volei"
-                    style="margin-top: 30px; margin-bottom: 30px; padding-left: 50px;">
-                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 10px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                    style="margin-top: 30px; margin-bottom: 10px; padding-left: 50px;">
+                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 ;"><b>Domínio no 2º set</b></h1>
-                <p id="texto" style="text-align: left; padding-left: 50px;">Diferentemente do primeiro set, o Brasil
-                    iniciou a segunda parcial melhor em quadra, fazendo 5 a 2.
-                    Pouco depois, Gabi soltou o braço, ampliando para 9 a 5. Estava fácil. Após levantamento perfeito de
-                    Roberta, Thaísa colocou a bola no chão, marcando 17 a 10. Numa largadinha de Kisy, o placar foi a 22
-                    a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
+                <div id="texto">
+                    <p>Diferentemente do primeiro set, o Brasil
+                        iniciou a segunda parcial melhor em quadra, fazendo 5 a 2.
+                        Pouco depois, Gabi soltou o braço, ampliando para 9 a 5. Estava fácil. Após levantamento
+                        perfeito de
+                        Roberta, Thaísa colocou a bola no chão, marcando 17 a 10. Numa largadinha de Kisy, o placar foi
+                        a 22
+                        a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
+                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa2">
+                </div>
                 <img src="Imagens/noticias/volei3.webp" alt="volei" style="padding-left: 50px;">
-            </main>
+                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                ;"><b>Argentina tenta reagir</b></h1>
+                <div id="texto">
+                    <p>A Argentina voltou melhor para o terceiro set, impondo dificuldades ao Brasil. Num erro de ataque
+                        de Gabi, as hermanas fizeram 5 a 3. Instantes depois foi a vez de Júlia Bergmann atacar para
+                        fora. Zé Roberto pediu desafio, e a arbitragem pegou um leve toque no bloqueio. Ponto das
+                        brasileiras, que diminuíram para 6 a 5. O empate do Brasil só foi acontecer quando Thaísa fez 8 a 8. A virada veio com Kisy, que marcou
+                    12 a 11. A Argentina sentiu o golpe e, minutos depois, Erika Mercado parou no bloqueio
+                    brasileiro: 16 a 13. Sem forças para reagir, a seleção visitante viu o Brasil fazer 21 a 15 num
+                    ponto de Carol. Com a vitória mais que encaminhada, o time verde-amarelo tratou de fechar a
+                    partida em 25 a 17.
+                    </p>
+                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa1">
+                </div>
+                <img src="Imagens/noticias/volei4.webp" alt="volei" style="padding-left: 50px; margin-bottom: 10px;">
             </main>
         </section>
+        <div id="rodap">
+            <h1 id="task">V-SPORTS</h1>
+        </div>
     </body>
 
     </html>
