--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     main#conteudo {
       display: grid;
       grid-template-columns: auto auto auto;
+      
     }
 
     main#conteudo2 {
@@ -67,10 +68,9 @@
       </a>
     </main>
   </section>
-<div id="rodap">
-
-      </div>
-
+  <div id="rodap">
+    <h1 id="task">V-SPORTS</h1>
+</div>
 </body>
 
 </html>
